# 698

hw1/: Makefile  Mat Mult CS698 GPU cluster.txt  hello_c  hw1  hw1-Asif-Uddin.tgz  hw1.c  hw1v2  hw1v2.c  template.c
hw2/: .hw2.c.swp  hw2  hw2-Asif-Uddin.tgz  hw2.c
hw2/hw2-Asif-Uddin/: hw2.c
hw3/: ex  ex.c  ex1  ex1.c  hostfile.txt  hw3  hw3-uddin-asif.tgz  hw3.c  hw3[B  hw3_1.c  template
hw3/hw3-uddin-asif/: Makefile  template.c
hw4/: Makefile  dot_prod  dot_prod_cuda.cu  dot_prod_mpi  dot_prod_mpi.cpp  helper_functions.h  hostfile.txt~  hw4-asif-uddin.tgz
hw4/hw4-asif-uddin/: dot_prod  (+1 more)
hw4/hw4-asif-uddin (1)/: README.md  dot_prod  dot_prod_cuda.cu  dot_prod_mpi.cpp
hw5/: Makefile~  hw5-asif-uddin.tgz  matrix_multiply.cpp  matrix_multiply.cpp~  mm  mm_cuda  mm_cuda.cu  mm_cuda_template.cu  mm_mpi  mm_mpi.cpp  mm_mpi.cpp~  shared  shared.cu  shared.cu~
hw6/: conv_cuda.cu~  conv_mpi.cpp~  hw6-asif-uddin.tgz
notes/: #313.txt#  .227.txt.swp  213.txt  220.txt  222.txt  698.txt  helloBsend.c  hw1  hw1.c  matmult.c  matrix_c.c  mpi_communication  notes on ems.txt  pointers  pointers_c  pointers_c.c  ptphw1.c  send_n_recv.c
project/: #Makefile#  #bfs_cuda.cu#  #bfs_mpi.cpp#  #graph_bfs_vertex.cu#  #graph_serial#  a.out  bfs  bfs_cuda.cu  bfs_mpi.cpp  bfs_mpi_1d.cpp~  bfs_mpi_noncuda.cpp~  graph_bfs_edge.cu  graph_bfs_edge.cu~  graph_bfs_vertex.cu  graph_cuda.cu~  graph_serial  graph_serial.cpp~
project/initialize/igraph_tutorial/: CMakeLists.txt  CMakeLists.txt~  igraph_create.c  igraph_create.c~  igraph_properties.c  igraph_test.c  igraph_test.c~
(+54 files in other folders)
